--- a/servidor/package.json
+++ b/servidor/package.json
@@ -4,7 +4,7 @@
   "description": "MERN API para mern tasks",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
+    "start": "node index.js",
     "dev": "nodemon ."
   },
   "repository": {
